--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,6 +8,7 @@
 @import "components/comments";
 @import "components/forms";
 @import "components/wp-classes";
+@import "layouts/base";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
