--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -4,8 +4,18 @@
 .navbar-nav a {
   @extend .nav-link;
 }
+.banner {
+  background: rebeccapurple;
+  color: white;
+}
 
+.banner .navbar {
+  background:transparent;
+}
 
 .page-header {
-  background: blue;
+  @extend .text-center;
+  padding: 5rem;
+
+  color: white;
 }
